--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
     font-size: 20px;
 }
 
-.button {
+.button, #Go {
     height: 35px;
     color:#706;
     padding: 0px 10px;
@@ -44,12 +44,18 @@ body {
     border:1px solid #706;
 }
 
+
+.confirmPlay {
+    align-self: center;
+    text-align: center;
+    font-size: 30px;
+}
 #timer {
     width: 125px;
     color: #706;
 }
 
-#viewHiScore {
+#viewHighScore {
     padding: 18px;
     text-decoration: none;
     border-radius: 5px 5px 0px 0px;
@@ -83,6 +89,14 @@ body {
     font-weight: 700;
     font-size: 25px;
     text-align: center;
+}
+
+.result #buzzer {
+    justify-content: center;
+    display: flex;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
 }
 
 .yourResults {
