--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body {
     border-top: 8px solid #706; 
     font-size: 10px;
     width: 100%;
-    position:absolute;
+    position:static;
     bottom:0;
     width:100%;
     height:  55px;
